@@ -171,7 +171,7 @@ namespace Claunia.PropertyList
         /// <param name="value">The value to represent as a NSObject.</param>
         /// <returns>A NSObject representing the given value.</returns>
         /// <exception cref="SystemException">When one of the objects contained in the array cannot be represented by a NSObject.</exception>
-        // TODO: Implement NSArray class
+        // TODO: Implement this.Wrap(Object)
         /*
         public static NSArray Wrap(Object[] value) {
             NSArray arr = new NSArray(value.length);
@@ -202,7 +202,7 @@ namespace Claunia.PropertyList
         /// <param name="value">The value to represent as a NSObject.</param>
         /// <returns>A NSObject representing the given value.</returns>
         /// <exception cref="SystemException">When one of the values contained in the map cannot be represented by a NSObject.</exception>
-        /// TODO: Implement this.Wrap(Object)
+        // TODO: Implement this.Wrap(Object)
 /*        public static NSSet Wrap(List<Object> value) {
             NSSet set = new NSSet();
             foreach (Object o in value)
